--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-<<<<<<< HEAD
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
     <script src="js/jquery-1.12.3.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -17,40 +16,10 @@
   </body>
   <body>
     <div id="hero-section"></div>
-    <div id="services"></div>
-    <div id="portafolio"></div>
-    <div id="about">
-      <div id="parte1"></div>
-      <div id="parte2"></div>
-    </div>
-    <div id="amazing-team">
-      <div class="container fondo-team">
-        <h2 class="text-center">OUR AMAZING TEAM</h2>
-        <p class="text-center"><em>Lorem ipsum dolor sit amet</em></p><center>
-        <div class="row team">
-          <div class="col-md-4 icons-team"><img src="img/team/1.jpg">
-            <h5><strong>Kay Garland</strong></h5>
-            <h6>Lead Designer</h6><i class="fa fa-twitter"></i><i class="fa fa-facebook"></i><i class="fa fa-linkedin"></i>
-          </div>
-          <div class="col-md-4 icons-team"><img src="img/team/2.jpg">
-            <h5><strong>Larry Parker</strong></h5>
-            <h6>Lead Marketer</h6><i class="fa fa-twitter"></i><i class="fa fa-facebook"></i><i class="fa fa-linkedin"></i>
-          </div>
-          <div class="col-md-4 icons-team"><img src="img/team/3.jpg">
-            <h5><strong>Diana Pertersen</strong></h5>
-            <h6>Lead Developer</h6><i class="fa fa-twitter"></i><i class="fa fa-facebook"></i><i class="fa fa-linkedin"></i>
-          </div>
-        </div>
-        <div class="row text-team">
-          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore<br>magna sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-        </div></center>
-      </div>
-      <div class="row logos"><center><img src="img/logos/envato.jpg"><img src="img/logos/designmodo.jpg"><img src="img/logos/themeforest.jpg"><img src="img/logos/creative-market.jpg"></center></div>
-=======
     <link rel="stylesheet" href="assets/css/._font-awesome.css">
     <script src="assets/js/jquery-1.12.3.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
-  </head>
+  </body>
   <body>
     <div id="services"></div>
     <div class="fondo-portfolio">
@@ -117,8 +86,28 @@
       </div>
     </div>
     <div id="amazing-team">
-      <div class="container"></div>
->>>>>>> 0d96d03f675c1a94291d9d4164fbf8848eefa902
+      <div class="container fondo-team">
+        <h2 class="text-center">OUR AMAZING TEAM</h2>
+        <p class="text-center"><em>Lorem ipsum dolor sit amet</em></p><center>
+        <div class="row team">
+          <div class="col-md-4 icons-team"><img src="img/team/1.jpg">
+            <h5><strong>Kay Garland</strong></h5>
+            <h6>Lead Designer</h6><i class="fa fa-twitter"></i><i class="fa fa-facebook"></i><i class="fa fa-linkedin"></i>
+          </div>
+          <div class="col-md-4 icons-team"><img src="img/team/2.jpg">
+            <h5><strong>Larry Parker</strong></h5>
+            <h6>Lead Marketer</h6><i class="fa fa-twitter"></i><i class="fa fa-facebook"></i><i class="fa fa-linkedin"></i>
+          </div>
+          <div class="col-md-4 icons-team"><img src="img/team/3.jpg">
+            <h5><strong>Diana Pertersen</strong></h5>
+            <h6>Lead Developer</h6><i class="fa fa-twitter"></i><i class="fa fa-facebook"></i><i class="fa fa-linkedin"></i>
+          </div>
+        </div>
+        <div class="row text-team">
+          <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore<br>magna sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+        </div></center>
+      </div>
+      <div class="row logos"><center><img src="img/logos/envato.jpg"><img src="img/logos/designmodo.jpg"><img src="img/logos/themeforest.jpg"><img src="img/logos/creative-market.jpg"></center></div>
     </div>
     <div id="contact-us"></div>
     <div id="pie-pagina"></div>
