--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     <div id="services"></div>
     <div class="fondo-portfolio">
       <div id="portafolio" class="container text-center portafolio">
-        <h2><b>PORTFOLIO</b></h2>
-        <p> <em>Lorem ipsum dolor sit amet consectetur,</em></p>
+        <div class="row row-uno">
+          <h2><b>PORTFOLIO</b></h2>
+          <p> <em>Lorem ipsum dolor sit amet consectetur,</em></p>
+        </div>
         <div class="row">
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail"><img src="img/portfolio/roundicons.png">
@@ -86,7 +88,8 @@
       </div>
     </div>
     <div id="amazing-team">
-      <div class="container fondo-team">
+      <div class="fondo-team"></div>
+      <div class="container">
         <h2 class="text-center">OUR AMAZING TEAM</h2>
         <p class="text-center"><em>Lorem ipsum dolor sit amet</em></p><center>
         <div class="row team">
