--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
           </div>
           <div class="col-md-4 color">
             <p> </p><strong>Privacy Policy Terms of Use</strong>
+            <p>ajhskjahgdsagdh</p>
           </div>
         </div>
       </div>
