--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
         </div>
       </div>
     </div>
-    <div id="amazing-team">
-      <div class="fondo-team"></div>
+    <div id="amazing-team"></div>
+    <div class="fondo-team">
       <div class="container">
         <h2 class="text-center">OUR AMAZING TEAM</h2>
         <p class="text-center"><em>Lorem ipsum dolor sit amet</em></p><center>
@@ -146,8 +146,8 @@
           <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore<br>magna sed do eiusmod tempor incididunt ut labore et dolore magna</p>
         </div></center>
       </div>
-      <div class="row logos"><center><img src="img/logos/envato.jpg"><img src="img/logos/designmodo.jpg"><img src="img/logos/themeforest.jpg"><img src="img/logos/creative-market.jpg"></center></div>
     </div>
+    <div class="row logos"><center><img src="img/logos/envato.jpg"><img src="img/logos/designmodo.jpg"><img src="img/logos/themeforest.jpg"><img src="img/logos/creative-market.jpg"></center></div>
     <div id="contact-us"></div>
     <div class="contact">
       <div class="container">
