--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="row">
           <div class="titulo">
             <h1>CONTACT US</h1>
-            <P></P><em>Lorem ipsum dolor sit amet consectetur.</em>
+            <P><em>Lorem ipsum dolor sit amet consectetur.</em></P>
           </div>
           <div class="columnas">
             <div class="col-md-6">
