about section end

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/._font-awesome.css">
-    <script src="assets/js/jquery-1.12.3.min.js"></script>
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
+    <script src="assets/js/jquery.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
   </head>
   <body>
@@ -15,13 +15,41 @@
     <div id="services"></div>
     <div id="portafolio"></div>
     <div id="about">
-      <h1>ABOUT</h1>
-      <P>Lorem</P>
+      <h1 class="text-center">ABOUT</h1>
+      <P class="text-center"><em>Lorem ipsum dolor sit amet</em></P><br>
       <div class="container">
+        <!-- PArte2-->
+        <hr class="linea-about">
         <div class="row">
-          <div class="col-sm-5"></div>
-          <div class="col-sm-2"></div>
-          <div class="col-sam-5"></div>
+          <div class="descr-historia pull-left text-right">
+            <h5>2009 - 2011</h5>
+            <h5>Our Humble Beginning</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo tempori ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniameiusmo temporincididunt ut labore et dolore magna aliqua.</p>
+          </div><img src="img/about/1.jpg" class="circulo-about img-about pull-left">
+        </div>
+        <div class="row">
+          <div class="descr-historia pull-right">
+            <h5>MARCH 2011</h5>
+            <h5>An agency is Born</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo tempori ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniameiusmo temporincididunt ut labore et dolore magna aliqua.</p>
+          </div><img src="img/about/2.jpg" class="circulo-about img-about pull-right">
+        </div>
+        <div class="row">
+          <div class="descr-historia pull-left text-right">
+            <h5>DECEMBER 2012</h5>
+            <h5>Transition to Full Service</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo tempori ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniameiusmo temporincididunt ut labore et dolore magna aliqua.</p>
+          </div><img src="img/about/3.jpg" class="circulo-about img-about pull-left">
+        </div>
+        <div class="row">
+          <div class="descr-historia pull-right">
+            <h5>JULY 2014</h5>
+            <h5>Phase two expansion </h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmo tempori ncididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,eiusmo temporincididunt ut labore et dolore magna aliqua.</p>
+          </div><img src="img/about/4.jpg" class="circulo-about img-about pull-right">
+        </div>
+        <div class="row text-center"><img id="our-story" src="img/about/5.png" class="circulo-about img-about">
+          <!--parte2	-->
         </div>
       </div>
     </div>
