--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
     <div id="hero-section">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
             <h3>Start Bootstrap</h3>
           </div>
-          <div class="col-md-6 menu text-center">
-            <ul class="list-menu list-unstyle list-inline">
-              <li><a href="">SERVICES</a></li>
-              <li><a href="">PORTAFOLIO</a></li>
-              <li><a href="">ABOUT</a></li>
-              <li> <a href="">TEAM</a></li>
-              <li><a href="">CONTACT</a></li>
-            </ul>
+          <div class="col-md-8">
+            <nav>
+              <div id="toogle-menu" class="fa fa-bars"></div>
+              <ul class="menu">
+                <li> <a href="" class="link-menu">SERVICES</a></li>
+                <li><a href="" class="link-menu">PORTAFOLIO</a></li>
+                <li><a href="" class="link-menu">ABOUT</a></li>
+                <li><a href="" class="link-menu">TEAM</a></li>
+                <li><a href="" class="link-menu">CONTACT</a></li>
+              </ul>
+            </nav>
           </div>
         </div>
         <div class="row text-center header-descripcion">
